Comprehensive Code Audit: Remove pin/password hash references, add detailed logging, set NODE_ENV to production

--- a/reset-password.html
+++ b/reset-password.html
@@ -125,7 +125,7 @@
     </form>
   </div>
   <script>
-    const API_ENDPOINT = window.location.hostname === 'localhost' ? 'http://localhost:3000/api' : 'https://rokthenats.co.za/api';
+    const API_ENDPOINT = '/api';
 
     function getQueryParam(name) {
       const url = new URL(window.location);
